# hmi_core

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.9660d45  JoystickPublisher.cpp  MqttTest  README.md  joystick.cpp  main.cpp  vision_src
GUI_PoliTOcean/: CMakeLists.txt  main.cpp
GUI_PoliTOcean/src/: Joystick.cpp
core/src/: JoystickPublisher.cpp
data/: politocean.desktop
include/: Button.hpp  Joystick.h  JoystickPublisher.h
libs/: CMakeLists.txt  PolitoceanHmiConfig.cmake
libs/Joystick/: CMakeLists.txt  Joystick.cpp  Joystick.h
libs/JoystickPublisher/: CMakeLists.txt  JoystickPublisher.cpp  JoystickPublisher.h
libs/Serial/: CMakeLists.txt  Serial.cpp  Serial.hpp
libs/autodrive/: CMakeLists.txt  autodrive.cpp  autodrive.h
libs/ipcamera/: CMakeLists.txt  ipcamera.cpp  ipcamera.h
libs/mainwindow/: .directory  CMakeLists.txt  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  moc_mainwindow.cpp_parameters  my_qlabel.cpp  my_qlabel.h  ui_design.h
libs/mainwindow/form/: design.ui
libs/vision/: CMakeLists.txt  vision.cpp  vision.cpp.autosave  vision.h
scripts/: jumbo.sh  politocean_setup.service
src/: CommandParser.cpp  Joystick.cpp  JoystickPublisher.cpp  Mouse.cpp  PhMeter.cpp  SensorsSubscriber.cpp  TestReflectable.cpp  commandParser.cpp  gui.cpp  joystickPub.cpp  main.cpp
test/: MqttTest.cpp
